# advent-of-code-2025

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
aoc/day_01/: README.md  pyproject.toml
aoc/day_01/src/day_01/puzzle_1/: solver.py
aoc/day_01/src/day_01/puzzle_2/: solver.py
aoc/day_01/tests/: conftest.py  test_day_01_puzzle_2.py  test_puzzle_1.py
aoc/day_02/: README.md  pyproject.toml
aoc/day_02/src/day_02/puzzle_1/: solver.py
aoc/day_02/src/day_02/puzzle_2/: solver.py
aoc/day_02/tests/: conftest.py  test_day_02_puzzle_2.py  test_puzzle_1.py  test_puzzle_2.py
aoc/day_03/: README.md  pyproject.toml
aoc/day_03/src/day_03/puzzle_1/: solver.py
aoc/day_03/src/day_03/puzzle_2/: solver.py
aoc/day_03/tests/: conftest.py  test_day_03_puzzle_1.py  test_day_03_puzzle_2.py
aoc/day_04/: README.md  pyproject.toml
aoc/day_04/src/day_04/puzzle_1/: solver.py
aoc/day_04/src/day_04/puzzle_2/: solver.py
aoc/day_04/tests/: conftest.py  test_day_04_puzzle_1.py  test_day_4_puzzle_2.py
aoc/day_05/: README.md  pyproject.toml
aoc/day_05/src/day_05/puzzle_1/: solver.py
aoc/day_05/src/day_05/puzzle_2/: solver.py
aoc/day_05/tests/: conftest.py  test_day_5_puzzle_1.py  test_day_5_puzzle_2.py
aoc/day_06/: README.md  pyproject.toml
aoc/day_06/src/day_06/: utils.py
aoc/day_06/src/day_06/puzzle_1/: solver.py
aoc/day_06/src/day_06/puzzle_2/: solver.py
aoc/day_06/tests/: conftest.py  test_day_06_puzzle_1.py  test_day_06_puzzle_2.py
aoc/day_07/: README.md  pyproject.toml
aoc/day_07/src/day_07/: utils.py
aoc/day_07/src/day_07/puzzle_1/: solver.py
aoc/day_07/src/day_07/puzzle_2/: solver.py
aoc/day_07/tests/: conftest.py  test_day_07_puzzle_1.py  test_day_07_puzzle_2.py
