[project]
name = "aoc"
version = "0.0.1"
description = "Solutions to the Advent of Code 2025 challenges in python"
readme = "README.md"
authors = [
    { name = "gmurro", email = "g.murro23@gmail.com" }
]
keywords = ['coding', 'christmas', 'challenge']
requires-python = ">=3.11,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# The root project has no direct runtime dependencies.
# Dependencies are managed in individual packages or dependency groups.
dependencies = []

[project.urls]
Repository = "https://github.com/gmurro/advent-of-code-2025"

[dependency-groups]
dev = [
    "ruff~=0.14.4",
    "pre-commit~=4.4.0",
    "mypy~=1.18.2",
    "commitizen~=4.9.1"
]


[tool.uv]
python-preference = "only-system"
default-groups = ["dev"]

[tool.uv.workspace]
members = [ "aoc/*" ]

[tool.mypy]
files = ["aoc"]
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = false
no_implicit_optional = true
warn_unused_ignores = true
follow_imports = "silent"
ignore_missing_imports = true
no_warn_return_any = true
allow_untyped_defs = true

[tool.commitizen]
version = "0.7.0"
version_files = [
    "pyproject.toml:version"
]
changelog_file = "CHANGELOG.md"
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
