[project]
name = "day-02"
version = "0.1.0"
description = "Day 2 - Gift Shop"
readme = "README.md"
authors = [
    { name = "gmurro", email = "g.murro23@gmail.com" }
]
requires-python = ">=3.11,<4.0"
dependencies = []

[tool.uv]
python-preference = "only-system"
default-groups = ["dev"]

[project.scripts]
day-02 = "day_02.puzzle_1.solver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/day_02"]

[dependency-groups]
dev = [
    "pytest~=9.0.0",
    "ruff~=0.14.4",
    "pre-commit~=4.4.0",
    "mypy~=1.18.2",
]

[tool.mypy]
files = ["src"]
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = false
no_implicit_optional = true
warn_unused_ignores = true
follow_imports = "silent"
ignore_missing_imports = true
no_warn_return_any = true
allow_untyped_defs = true


[[tool.mypy.overrides]]
module = "day_02.*"
follow_untyped_imports = true
ignore_missing_imports = false


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
target-version = "py313"
line-length = 88
fix = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "PGH",  # pygrep-hooks
    "RUF",  # ruff specific rules
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "T10",  # flake8-debugger (some use T20 for print)
    "TRY",  # tryceratops
    "UP",   # âˆ
    "YTT",  # flake8-2020
]
ignore = [
    "E501",   # LineTooLong (handled by formatter)
    "E731",   # DoNotAssignLambda
    "F403",   # Unspecified Import Names (e.g. from X import *)
    "TRY003", # Long messages in exceptions
    "B905",   # Zip without explicit strict (consider if `strict=True` is needed for Python 3.10+)
    "S101",   # Use of assert (allowed in tests, see per-file-ignores)
    "TRY301", # "Abstract `raise` to an inner function
    "TRY400", # Logging error instead of exception
    "TRY300", # Checks for return statements in try blocks
    "C901",   # Checks for functions with a high McCabe complexity.
]
exclude = ["tests/**/*.py"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # asserts allowed in tests
    "ARG001", # Unused function argument (common in test fixtures)
    "F811",  # Redefinition of unused name (common with pytest fixtures)
]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
